--- a/mpc19/paper.tex
+++ b/mpc19/paper.tex
@@ -1080,8 +1080,8 @@ avenue concerns the study of \emph{time invertible} programming languages:
 Though not immediately clear in the current presentation, the trace on
 $\Inv\Dapprox$ is not just reversible (in the sense that it preserves partial
 isomorphisms) but in fact time invertible, in the sense that the number of
-computation steps needed to perform $\trace (\dagger f)$ is \emph{precisely}
-the same as what is needed to perform $\trace~f$ on any input. Since the
+computation steps needed to perform $\traceD \,(\daggerD\, f)$ is \emph{precisely}
+the same as what is needed to perform $\traceD\,f$ on any input. Since the
 $\Delay$ monad conveniently allows the counting of computation steps, we
 conjecture that this is an ideal setting in which to study such intentional
 semantics of reversible programming languages.
