--- a/mpc19/paper.bib
+++ b/mpc19/paper.bib
@@ -478,3 +478,14 @@ isbn="978-3-540-37958-4"
   year      = {2017},
   doi       = {10.4230/LIPIcs.CSL.2017.21}
   }
+
+@article{JoyalSV96,
+title={Traced monoidal categories},
+volume={119},
+DOI={10.1017/S0305004100074338},
+number={3},
+journal={Mathematical Proceedings of the Cambridge Philosophical Society},
+publisher={Cambridge University Press},
+author={Joyal, André and Street, Ross and Verity, Dominic},
+year={1996},
+pages={447–468}}
